--- a/medicare/src/index.css
+++ b/medicare/src/index.css
@@ -4,8 +4,8 @@ html {
     position: absolute;
     width: 100%;
     height: 906px;
-    left: 0px;
-    top: 0px;
+    left: 0;
+    top: 0;
     /* height: 100%; */
     /* position: relative; */
     background-image: url(/background.svg);
